--- a/index.html
+++ b/index.html
@@ -29,5 +29,9 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
+  <a href="header/header.html" class="others" target="_blank">Header</a>
+  <a href="footer/footer.html" class="others" target="_blank">Footer</a>
+  <a href="fixed-nav/fixed-nav.html" class="others" target="_blank">Fixed-nav</a>
+  <a href="cover-header/big-header.html" class="others" target="_blank">Cover-header</a>
 </body>
 </html>
